--- a/wisercat_backend/src/main/resources/application.properties
+++ b/wisercat_backend/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.username=filterapp
 spring.datasource.password=changeme
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
